# FFmpegDemo4.2.2

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegdemo1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  WwyPlayer.cpp  WwyPlayer.h  safe_queue.h  wy_player.cpp
app/src/main/java/com/example/ffmpegdemo1/: MainActivity.java  SurPlayFlags.java  WwyPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ffmpegdemo1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
